# ros2_ws_CL-1374_eYRC23-24

./: README.md
src/ebot_control/: package.xml  setup.py
src/ebot_control/ebot_control/: config.yaml  ebot_dock.py  hardware_aruco.py  hardware_docking.py  hardware_servo.py  reset_arm.py  reset_services.py
src/ebot_control/launch/: ebot_control.launch.py
src/ebot_docking/: CMakeLists.txt
src/ebot_docking/srv/: DockSw.srv
src/ebot_real_nav2/: CMakeLists.txt  package.xml
src/ebot_real_nav2/config/: ekf.yaml  mapper_params_online_async.yaml
src/ebot_real_nav2/launch/: ebot_nav2_brinup.launch.py
src/ebot_real_nav2/models/ebot/: ebot.gazebo  ebot_trolley.xacro  ebot_trolley_ur5.xacro
src/ebot_real_nav2/params/: nav2_params.yaml  nav2_params_filtered.yaml
src/ebot_real_nav2/scripts/: usb_relay_service.py
src/pymoveit2/: CMakeLists.txt  package.xml
src/pymoveit2/examples/: condition.yaml
src/pymoveit2/examples/assets/: floor.stl  simpleRack.stl  table.stl
src/pymoveit2/pymoveit2/: __init__.py  moveit2.py  moveit2_servo.py
src/pymoveit2/pymoveit2/robots/: panda.py  ur5.py
src/ur5_core/rack_trigger/: CMakeLists.txt  package.xml
src/ur5_core/rack_trigger/srv/: RackTrigger.srv
src/ur5_core/ur5_moveit/: .setup_assistant  package.xml
src/ur5_core/ur5_moveit/config/: controllers.yaml  joint_state_controllers.yaml  ros_controllers.yaml  ur5.srdf  ur5.urdf.xacro
src/ur5_core/ur_description/: CMakeLists.txt  package.xml
src/ur5_core/ur_description/msg/: ArucoTf.msg  (+3 more)
src/usb_relay/: CMakeLists.txt  package.xml
src/usb_relay/srv/: RelaySw.srv
(+3 files in other folders)
